2007-12-05  Dan Winship  <danw@gnome.org>

	* libsoup/Makefile.am (libsoupinclude_HEADERS): remove
	soup-connection.h and soup-message-queue.h

	* libsoup/soup-types.h: remove SoupConnection and SoupMessageQueue
	which are no longer public

	* libsoup/soup.h: sync this to reality for the first time in years

	* libsoup/soup-session.c (soup_session_get_queue): Add this, for
	subclasses, as the queue is no longer a public part of the session
	struct.

	* libsoup/soup-message.h:
	* libsoup/soup-message-private.h: Move soup_message_send_request()
	and soup_message_receive_request() to soup-message-private.h,
	remove soup_message_send_request_internal().

	* libsoup/soup-session-private.h: Move "protected" SoupSession
	methods (soup_session_get_connection,
	soup_session_try_prune_connection) here from soup-session.h
	Add soup_session_get_queue.

2007-12-05  Dan Winship  <danw@gnome.org>

	* configure.in: bump version to 2.3.0 and SOUP_API_VERSION to 2.4,
	and drop AGE/CURRENT/REVISION all to 0.

	* libsoup/Makefile.am: Rename library to libsoup-2.4.la

	(start of libsoup-2.4 branch)

2007-11-26  Dan Winship  <danw@gnome.org>

	* configure.in: 2.2.104

	* NEWS: update

2007-11-21  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-io.c (soup_message_io_cleanup): make this
	non-static.

	* libsoup/soup-message.c (finalize): Use soup_message_io_cleanup()
	rather than soup_message_io_stop(), to avoid leaks when finalizing
	an unfinished message. (Another part of #498509, Wouter Cloetens.)

2007-11-20  Dan Winship  <danw@gnome.org>

	Fix up SOUP_SESSION_ASYNC_CONTEXT. #498509, Wouter Cloetens

	* libsoup/soup-message-io.c (soup_message_io_unpause): don't leak
	the async_context

	* libsoup/soup-server.c (soup_server_quit): disconnect the
	"new_connection" handler.
	(soup_server_get_async_context): Convenience method to return the
	server's async_context.

	* libsoup/soup-server-message.c: don't circularly ref the server,
	there's no need anyway.
